--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Med-Call</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/loogo-removebg-preview.png">
+  <link rel="icon" type="image/x-icon" href="./assets/logo.jpeg">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
